correct dataset scrollbar styling

--- a/app/src/sass/crn_app/_dataset.dataset.scss
+++ b/app/src/sass/crn_app/_dataset.dataset.scss
@@ -2,7 +2,6 @@
 .dataset {
 
     .dataset-inner {
-        padding-top: 60px;
         margin-bottom: 15%;
         h1 {
             margin-top: 0;
